# wazuhl

./: .gitignore  CMakeLists.txt  Dockerfile  actions_to_list.py  docker-compose.sh  docker-compose.yml  entrypoint.sh  full_restart.sh  o2actions  training_ground_restart.sh
cmake/: config-ix.cmake
cmake/modules/: HandleLLVMOptions.cmake  LLVMConfig.cmake.in
dashboard/: Dockerfile  data_receiver.py  main.py  plotter.py  requirements.txt
dashboard/templates/: main.html
include/llvm/ADT/: Statistic.h
include/llvm/Config/: config.h.cmake
include/llvm/IR/: PassManager.h
include/llvm/Passes/: PassBuilder.h
include/llvm/Wazuhl/: Action.h  Config.h  Config.h.in  DQN.h  Environment.h  ExperienceReplay.h  FeatureCollector.h  Manager.h  NormalizedTimer.h  PassAction.h  PolicyEvaluator.h  Q.h  Random.h  ReinforcementLearning.h  StateFeatures.h
lib/: CMakeLists.txt  LLVMBuild.txt
lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassRegistry.def
lib/Support/: Statistic.cpp
lib/Transforms/Scalar/: LICM.cpp  LoopUnrollPass.cpp
lib/Transforms/Utils/: LoopUnroll.cpp
lib/Wazuhl/: Action.cpp  CMakeLists.txt  Config.cpp  DQN.cpp  Environment.cpp  ExperienceReplay.cpp  ExperienceReplay.fbs  FeatureCollector.cpp  LLVMBuild.txt  Manager.cpp  NormalizedTimer.cpp  PassAction.cpp  PolicyEvaluator.cpp  Random.cpp  model.prototxt  model.prototxt.in  solver.prototxt
training_ground/: README.md  requirements.txt  train.py
training_ground/cmake_configs/: O2.cmake  OWrun.cmake  OWtrain.cmake
training_ground/src/: config.py  experience.py  options.py  reinforcer.py  testrunner.py  utils.py
training_ground/suites/: llvm-test-suite.py  suites.py
unittests/: CMakeLists.txt
unittests/Wazuhl/: CMakeLists.txt  ReinforcementLearningTest.cpp
